crates/am/tests/snapshots/snapshots__snapshot_hook_zsh_with_aliases.snap
---
source: crates/am/tests/snapshots.rs
assertion_line: 526
expression: output
---
printf '%s\n' 'am: loaded .aliases'
printf '%s\n' '  b → cargo build'
printf '%s\n' '  t → cargo test'
alias b="cargo build"
alias t="cargo test"
export _AM_PROJECT_ALIASES="b|b58de66,t|ab61de4"
