crates/am/tests/snapshots/snapshots__snapshot_import_summary_no_conflicts.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
Importing "global" (1 aliases)

  new:
    gs → git status
