crates/am/tests/snapshots/snapshots__snapshot_import_summary_with_conflicts.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
Importing "git" (5 aliases)

  new:
    ga → git add
    gd → git diff
    gp → git push

  2 conflicts:

    cm:
      - git commit -m
      + git commit -sm

    gs:
      - git status --short
      + git status
