crates/am/tests/snapshots/snapshots__snapshot_init_bash_simple_profile.snap
---
source: crates/am/tests/snapshots.rs
expression: output
---
alias gs="git status"
alias ll="ls -lha"
export _AM_ALIASES="gs|22db469,ll|619d266"
am() {
  command am "$@"
  local am_status=$?
  if [[ $am_status -ne 0 ]]; then return $am_status; fi
  case "$1" in
    add|a|remove|r|trust|tui|t)
      eval "$(command am sync bash)" ;;
    use|u|untrust)
      eval "$(command am sync --quiet bash)" ;;
    var|v)
      case "$2" in
        set|unset) eval "$(command am sync bash)" ;;
      esac ;;
    profile|p)
      case "$2" in
        use|u) eval "$(command am sync --quiet bash)" ;;
        add|a|remove|r) eval "$(command am sync bash)" ;;
      esac ;;
  esac
}

# am cd hook: sync project aliases on directory change
__am_hook() {
  local previous_exit_status=$?
  if [[ "${__am_prev_dir:-}" != "$PWD" ]]; then
    __am_prev_dir="$PWD"
    eval "$(command am sync bash)"
  fi
  return $previous_exit_status
}
if [[ "$(declare -p PROMPT_COMMAND 2>&1)" == "declare -a"* ]]; then
  case " ${PROMPT_COMMAND[*]} " in
    *" __am_hook "*) ;;
    *) PROMPT_COMMAND=(__am_hook "${PROMPT_COMMAND[@]}") ;;
  esac
else
  case ";${PROMPT_COMMAND:-};" in
    *";__am_hook;"*) ;;
    *) PROMPT_COMMAND="__am_hook${PROMPT_COMMAND:+;$PROMPT_COMMAND}" ;;
  esac
fi
__am_hook

eval "$(COMPLETE=bash command am)"
if declare -F _clap_complete_am > /dev/null; then
    eval "_clap_complete_am_orig() $(declare -f _clap_complete_am | tail -n +2)"
    _clap_complete_am() {
        export _AM_COMP_LINE="${COMP_LINE-}"
        export _AM_COMP_POINT="${COMP_POINT-0}"
        _clap_complete_am_orig "$@"
        local rc=$?
        unset _AM_COMP_LINE _AM_COMP_POINT
        return $rc
    }
fi
